--- a/storage/templates/storage/trading/new_offer.html
+++ b/storage/templates/storage/trading/new_offer.html
@@ -23,13 +23,13 @@
 
     var total_stocks = {};
     {% for storage in storages %}
-        total_stocks["{{ storage|dict_key:'pk' }}"] = {};
+        total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"] = {};
         {% for group in storage_cl|get_attr:'types' %}
             {% for good in storage_cl|get_attr:group %}
-                total_stocks["{{ storage|dict_key:'pk' }}"]['{{ good }}'] = {% localize off %}{{ storage|dict_key:good }}{% endlocalize %};
+                total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"]['{{ good }}'] = {% localize off %}{{ storage|dict_key:good }}{% endlocalize %};
             {% endfor %}
         {% endfor %}
-                total_stocks["{{ storage|dict_key:'pk' }}"]['wild_pass'] = {% localize off %}{{ player|get_attr:'cards_count' }}{% endlocalize %};
+                total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"]['wild_pass'] = {% localize off %}{{ player|get_attr:'cards_count' }}{% endlocalize %};
     {% endfor %}
 </script>
 <form id="new_offer_form" role="form">
@@ -66,7 +66,7 @@
         <div class="col-xs-6 col-sm-6 col-md-6" align="left">
             <select name="storage" id="storage">
                 {% for storage in storages %}
-                <option {% if storage == storages|first %} selected {% endif %} value="{{ storage|dict_key:'pk' }}">{{ storage|dict_key:'region__region_name' }}</option>
+                <option {% if storage == storages|first %} selected {% endif %} value="{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}">{{ storage|dict_key:'region__region_name' }}</option>
                 {% endfor %}
             </select>
         </div>
