число прописанных в реге

--- a/region/templates/region/region_view.html
+++ b/region/templates/region/region_view.html
@@ -71,6 +71,14 @@
                         </div>
                         <div class="row flex" >
                             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+                                <b><font size="4">Граждан:</font></b>
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <b><font size="4">{{ residents_count }}</font></b>
+                            </div>
+                        </div>
+                        <div class="row flex" >
+                            <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                 <b><font size="4">Партий:</font></b>
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
