отмена изучения навыков

--- a/player/templates/player/overview_skills.html
+++ b/player/templates/player/overview_skills.html
@@ -1,7 +1,7 @@
 {% load get_sum %}
 {% load get_sub %}
 {% load get_mul %}
-{% load i18n %}
+{% load l10n %}{% load i18n %}
 {% load tz %}
 {% load static %}
 {% load get_hh_mm_ss %}
